# midi-ft-bridge

./: .gitignore  CMakeLists.txt  INSTALL.md  NOTES.md  bt-bridge.service  bt_bridge.py  bt_bridge_test.py  bt_clip_test.py  bt_fps_test.py  config.json  config_local.json  ft_test.py  ft_test_tiny.py  midi-ft-bridge.service  pixel_color.txt  start.txt
WISSEN/: INSTALL.md  NOTES.md  pixel_color.txt
clips/: ProRes-to-MP4.applescript  README.txt
cmake/: aarch64-toolchain.cmake  arm-toolchain.cmake
deploy/: build-macos.sh  bundle-app-libs.sh  deploy.sh
mac-app/: icon-gen.py  project.yml
mac-app/MidiFtBridge/: AppModel.swift  ConfigEditorView.swift  ConfigModel.swift  ContentView.swift  EngineBridge.h  EngineBridge.mm  HelpView.swift  Info.plist  MidiFtBridge-Bridging-Header.h  MidiFtBridgeApp.swift
media/: template.aep
setup/: set-static-arp-macos.sh  setup-ap.sh  setup-panel.sh  setup-pizero.sh  tune-glinet-ap.sh
src/: audio_output_macos.h  audio_output_macos.mm  audio_player.cpp  audio_player.h  audio_player_macos.cpp  audio_player_macos_native.cpp  audio_player_stub.cpp  ble_sender.cpp  ble_sender.h  ble_sender_macos.mm  ble_sender_stub.cpp  clip_player.cpp  clip_player.h  clip_player_macos.mm  config.h  engine.cpp  engine.h  ft_sender.cpp  ft_sender.h  main.cpp  midi_input.cpp  midi_input.h  midi_input_macos.cpp  midi_input_stub.cpp  status_server.cpp  status_server.h  video_player.cpp  video_player.h
tools/: clip_smoketest.cpp  panel_viewer.cpp
